# itmarathon2023

./: CMakeLists.txt  README.md  memorie.txt
src/: CPU.cpp  CPU.h  DataCache.cpp  DataCache.h  Execute.cpp  Execute.h  Instruction.cpp  Instruction.h  InstructionCache.cpp  InstructionCache.h  Memory.cpp  Memory.h  main.cpp
